poc/ingress-nexus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: cicd
spec:
  ingressClassName: nginx
  rules:
  - host: "nexus.192.168.1.99.nip.io"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nexus
            port:
              number: 9001
