poc/ingress-sonarqube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: cicd
spec:
  ingressClassName: nginx
  rules:
  - host: "sonarqube.192.168.1.99.nip.io"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: sonarqube-service
            port:
              number: 9000
